--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MYSQL_URL = jdbc:mysql://localhost:3306/employee_api
-MYSQL_USERNAME = root
-MYSQL_PASSWORD = new_password
+export MYSQL_URL=jdbc:mysql://localhost:3306/employees_api
+export MYSQL_USER=root
+export MYSQL_PASSWORD=new_password
