--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.application.name=CRUDoperations
 
 # Datasource Configuration
-spring.datasource.url=${MYSQL_URL}
-spring.datasource.username=${MYSQL_USERNAME}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/employees_api
+spring.datasource.username=root
+spring.datasource.password=new_password
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
