shown the employees data on UI and implemented add-employee post request

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Application Name
-spring.application.name=CRUDoperations
+spring.application.name=backend
 
 # Datasource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/employees_api
